manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleepapi
spec:
  selector:
    matchLabels:
      app: sleepapi
  replicas: 1
  template:
    metadata:
      labels:
        app: sleepapi
    spec:
      containers:
      - name: sleepapi
        image: lakmatiol.azurecr.io/sleepapi:v1
        ports:
        - containerPort: 8080
