manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sleepapi
spec:
  selector:
    app: sleepapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
