manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepapi

spec:
  rules:
  - host: "sleep.lakmatiol.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sleepapi
            port:
              number: 8080
